fix: changed the z-index of the sidebar to overlay the main area

--- a/app/globals.css
+++ b/app/globals.css
@@ -237,21 +237,6 @@ aside a{
   display: none !important;
 }
 
-.custom-dropdown {
-  border: none !important;
-  background: transparent !important;
-  box-shadow: none !important;
-  padding: 0 !important;
-}
-
-.custom-dropdown:focus,
-.custom-dropdown:active,
-.custom-dropdown:focus-visible {
-  outline: none !important;
-  box-shadow: none !important;
-}
-
-.caret-icon {
-  color: white;
-  font-size: 1.2rem;
+.dropdown-menu {
+  z-index: 2000 !important;
 }
